--- a/danit-journal.html
+++ b/danit-journal.html
@@ -1395,9 +1395,11 @@
                 }
                 
                 const result = await response.json();
-                return result.filePath; // Returns /assets/journal/filename.jpg
+                // Support both new format (url) and old format (filePath) for backward compatibility
+                return result.url || result.filePath; // Returns /assets/journal/filename.jpg
             } catch (error) {
-                console.error('Error uploading media:', error);
+                console.log('Full Error:', error);
+                alert('Check console for details');
                 throw error;
             }
         }
