Add mobile-web-app-capable meta tag

--- a/danit-journal.html
+++ b/danit-journal.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="יומן דנית">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="יומן דיגיטלי אישי - סיפור חיים מתמשך ומתפתח">
     <title>יומן דנית | Danit's Journal</title>
     
